changed module namespaces

--- a/view/frontend/templates/new-module.phtml
+++ b/view/frontend/templates/new-module.phtml
@@ -5,9 +5,9 @@
  * @var \Gene\BetterCheckout\ViewModel\Assets $assetViewModel
  */
 
-$onNewCallback = $block->getViewFileUrl('Gene_BetterCheckoutNewModule::js/checkout/dist/callbacks/onNewCallback.min.js');
-$newComponent = $block->getViewFileUrl('Gene_BetterCheckoutNewModule::js/checkout/dist/components/NewComponent/NewComponent.min.js');
-$styles = $block->getViewFileUrl('Gene_BetterCheckoutNewModule::js/checkout/dist/styles.css');
+$onNewCallback = $block->getViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/callbacks/onNewCallback.min.js');
+$newComponent = $block->getViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/NewComponent/NewComponent.min.js');
+$styles = $block->getViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/styles.css');
 ?>
 
 <script>
