--- a/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
+++ b/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
@@ -6,3 +6,14 @@
     height: var(--braintree-express-button-height, 45px);
   }
 }
+
+.ppcp-apple-pay-container {
+  min-height: var(--braintree-express-button-height, 45px);
+
+  apple-pay-button,
+  &.text-loading {
+    height: var(--braintree-express-button-height, 45px);
+    --apple-pay-button-height: var(--braintree-express-button-height, 45px);
+    width: 100%;
+  }
+}
