renamed block in xml file

--- a/view/frontend/layout/genebettercheckout_checkout_index.xml
+++ b/view/frontend/layout/genebettercheckout_checkout_index.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="gene.better.checkout.container">
-            <block name="gene.better.checkout.new.module"
+            <block name="gene.better.checkout.ppcp.extension"
                    template="Gene_BetterCheckoutPPCP::ppcp-extension.phtml"
                    ifconfig="payment/paypal_complete_payments/is_active"
                    after="-">
