added paypal implementation

--- a/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
+++ b/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
@@ -17,3 +17,11 @@
     width: 100%;
   }
 }
+
+.paypal-button-container {
+  max-height: var(--braintree-express-button-height, 45px);
+
+  &.text-loading {
+    height: var(--braintree-express-button-height, 45px);
+  }
+}
