--- a/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
@@ -1,5 +1,6 @@
 .google-pay,
-.apple-pay {
+.apple-pay,
+.pay-pal {
   &-container {
     background-color: var(--radio-input-wrapper__background-color);
     border: var(--radio-input-wrapper__border-weight) var(--base__border-style) var(--radio-input-wrapper__border-color);
