added paypal/paylater/messaging/venmo component on payment step

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
@@ -1,6 +1,7 @@
 .google-pay,
 .apple-pay,
-.pay-pal {
+.pay-pal,
+.venmo {
   &-container {
     background-color: var(--radio-input-wrapper__background-color);
     border: var(--radio-input-wrapper__border-weight) var(--base__border-style) var(--radio-input-wrapper__border-color);
