added structure for venmo, paypal, card payments

--- a/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
+++ b/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
@@ -20,7 +20,7 @@
   }
 }
 
-.paypal-button-container {
+.paypal-express--button-container {
   max-height: var(--ppcp-express-button-height, 45px);
 
   &#ppcp-paypal_ppcp_paylater {
