added captcha elements for each payment method

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
@@ -153,6 +153,11 @@
       grid-row: 2;
     }
   }
+
+  .ppcp-store-method,
+  .recaptcha {
+    margin-bottom: var(--indent__m);
+  }
 }
 
 @media screen and (min-width: 1024px) {
