apm integration WIP

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
@@ -3,7 +3,8 @@
   .apple-pay,
   .pay-pal,
   .venmo,
-  .card {
+  .card,
+  .apm-payment {
     &-container {
       background-color: var(--radio-input-wrapper__background-color);
       border: var(--radio-input-wrapper__border-weight) var(--base__border-style) var(--radio-input-wrapper__border-color);
