added fix for card payments build and styles

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
@@ -74,4 +74,11 @@
   .recaptcha {
     margin-bottom: var(--indent__m);
   }
+
+  #card-number-field-container + .error-message,
+  #card-expiry-field-container + .error-message,
+  #card-cvv-field-container + .error-message {
+    margin: 0 auto var(--indent__base);
+    max-width: 480px;
+  }
 }
