added fix for paypal pay later qa feedback

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
@@ -90,6 +90,7 @@
       grid-template-rows: repeat(3, auto);
       margin: 0;
       padding: var(--indent__base);
+      min-height: 135px;
 
       &.ppcp-payment__payment-method-disabled {
         background: var(--selectable__background-color);
