added couple of fixes for paylater messaging

--- a/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
+++ b/view/frontend/web/js/checkout/src/components/ExpressPayments/expressPayments.scss
@@ -20,6 +20,10 @@
   }
 }
 
+.message-active {
+  margin-bottom: var(--indent__base);
+}
+
 .paypal-express--button-container {
   max-height: var(--ppcp-express-button-height, 42px);
 
