--- a/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
@@ -35,6 +35,7 @@
   grid-template-columns: unset;
   overflow-x: auto;
   padding-bottom: var(--indent__s);
+  overflow-y: hidden;
 
   .email {
     max-width: 127px;
