recapture fixes for APM

--- a/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/paymentMethods.scss
@@ -34,6 +34,10 @@
           height: 55px;
         }
       }
+
+      .actions-toolbar {
+        margin-bottom: var(--indent__m);
+      }
     }
 
     &-content {
