--- a/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
+++ b/view/frontend/web/js/checkout/src/components/PaymentPage/VaultedPayments/vaultedMethods.scss
@@ -45,7 +45,6 @@
 
   .email {
     grid-area: col3;
-    max-width: 150px;
   }
 }
 
@@ -58,6 +57,10 @@
   overflow-x: auto;
   padding-bottom: var(--indent__s);
   overflow-y: hidden;
+
+  .vaulted-method {
+    display: flex;
+  }
 
   img {
     max-width: 30px;
@@ -146,6 +149,15 @@
     &__name,
     &__expiry {
       font-weight: var(--font-weight__semibold);
+    }
+
+    &__name {
+      grid-column: 1 / -1;
+      overflow-wrap: break-word;
+    }
+
+    &__expiry {
+      margin-top: -15px;
     }
 
     &-tick {
