--- a/view/frontend/layout/bluefinch_checkout_index.xml
+++ b/view/frontend/layout/bluefinch_checkout_index.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="gene.better.checkout.container">
-            <block name="gene.better.checkout.ppcp.extension"
-                   template="Gene_BetterCheckoutPPCP::ppcp-extension.phtml"
+        <referenceContainer name="bluefinch.checkout.container">
+            <block name="bluefinch.checkout.ppcp.extension"
+                   template="BlueFinch_CheckoutPPCP::ppcp-extension.phtml"
                    ifconfig="payment/paypal_complete_payments/is_active"
                    after="-">
                 <arguments>
-                    <argument name="asset_view_model" xsi:type="object">Gene\BetterCheckout\ViewModel\Assets</argument>
+                    <argument name="asset_view_model" xsi:type="object">BlueFinch\Checkout\ViewModel\Assets</argument>
                 </arguments>
             </block>
         </referenceContainer>
