--- a/view/frontend/layout/checkout_onepage_success.xml
+++ b/view/frontend/layout/checkout_onepage_success.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block name="checkout.success.cart.clear" template="Gene_BetterCheckoutPPCP::checkout/cart-clear.phtml"/>
+            <block name="checkout.success.cart.clear" template="BlueFinch_CheckoutPPCP::checkout/cart-clear.phtml"/>
         </referenceContainer>
     </body>
 </page>
