--- a/view/frontend/templates/ppcp-extension.phtml
+++ b/view/frontend/templates/ppcp-extension.phtml
@@ -2,44 +2,44 @@
 /**
  * @var \Magento\Framework\View\Element\Template $block
  * @var \Magento\Framework\Escaper $escaper
- * @var \Gene\BetterCheckout\ViewModel\Assets $assetViewModel
+ * @var \BlueFinch\Checkout\ViewModel\Assets $assetViewModel
  */
 
 $assetViewModel = $block->getAssetViewModel();
 
-$expressGooglePay = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/ExpressPayments/GooglePay/GooglePay.min.js');
-$expressApplePay = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/ExpressPayments/ApplePay/ApplePay.min.js');
-$expressPayPal = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/ExpressPayments/PayPal/PayPal.min.js');
-$paymentMethods = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/PaymentPage/PaymentMethodsList.min.js');
-$vaultedPaymentMethods = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/PaymentPage/VaultedPayments/VaultedMethodsList.min.js');
-$icons = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/FooterIcons/FooterIcons.min.js');
-$paymentIcons = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/components/PaymentIcons/PaymentIcons.min.js');
+$expressGooglePay = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/ExpressPayments/GooglePay/GooglePay.min.js');
+$expressApplePay = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/ExpressPayments/ApplePay/ApplePay.min.js');
+$expressPayPal = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/ExpressPayments/PayPal/PayPal.min.js');
+$paymentMethods = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/PaymentPage/PaymentMethodsList.min.js');
+$vaultedPaymentMethods = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/PaymentPage/VaultedPayments/VaultedMethodsList.min.js');
+$icons = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/FooterIcons/FooterIcons.min.js');
+$paymentIcons = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/components/PaymentIcons/PaymentIcons.min.js');
 
-$styles = $assetViewModel->getDistViewFileUrl('Gene_BetterCheckoutPPCP::js/checkout/dist/styles.css');
+$styles = $assetViewModel->getDistViewFileUrl('BlueFinch_CheckoutPPCP::js/checkout/dist/styles.css');
 ?>
 
 <script>
-    window.geneCheckout = window.geneCheckout || {};
-    window.geneCheckout.expressPaymentMethods = window.geneCheckout.expressPaymentMethods || {};
-    window.geneCheckout.paymentMethods = window.geneCheckout.paymentMethods || {};
-    window.geneCheckout.footerPaymentIcons = window.geneCheckout.footerPaymentIcons || {};
-    window.geneCheckout.paymentIcons = window.geneCheckout.paymentIcons || {};
-    window.geneCheckout.additionalVaultedMethods = window.geneCheckout.additionalVaultedMethods || {};
+    window.bluefinchCheckout = window.bluefinchCheckout || {};
+    window.bluefinchCheckout.expressPaymentMethods = window.bluefinchCheckout.expressPaymentMethods || {};
+    window.bluefinchCheckout.paymentMethods = window.bluefinchCheckout.paymentMethods || {};
+    window.bluefinchCheckout.footerPaymentIcons = window.bluefinchCheckout.footerPaymentIcons || {};
+    window.bluefinchCheckout.paymentIcons = window.bluefinchCheckout.paymentIcons || {};
+    window.bluefinchCheckout.additionalVaultedMethods = window.bluefinchCheckout.additionalVaultedMethods || {};
 
     // Express Payments
-    window.geneCheckout.expressPaymentMethods.PpcpGooglePay = "<?= $escaper->escapeJs($expressGooglePay) ?>";
-    window.geneCheckout.expressPaymentMethods.PpcpApplePay = "<?= $escaper->escapeJs($expressApplePay) ?>";
-    window.geneCheckout.expressPaymentMethods.PpcpPayPal = "<?= $escaper->escapeJs($expressPayPal) ?>";
+    window.bluefinchCheckout.expressPaymentMethods.PpcpGooglePay = "<?= $escaper->escapeJs($expressGooglePay) ?>";
+    window.bluefinchCheckout.expressPaymentMethods.PpcpApplePay = "<?= $escaper->escapeJs($expressApplePay) ?>";
+    window.bluefinchCheckout.expressPaymentMethods.PpcpPayPal = "<?= $escaper->escapeJs($expressPayPal) ?>";
 
     // Icons
-    window.geneCheckout.footerPaymentIcons.AdyenFooterIcons = "<?= $escaper->escapeJs($icons) ?>";
-    window.geneCheckout.paymentIcons.AdyenIcons = "<?= $escaper->escapeJs($paymentIcons) ?>";
+    window.bluefinchCheckout.footerPaymentIcons.AdyenFooterIcons = "<?= $escaper->escapeJs($icons) ?>";
+    window.bluefinchCheckout.paymentIcons.AdyenIcons = "<?= $escaper->escapeJs($paymentIcons) ?>";
 
     // Payment Methods
-    window.geneCheckout.paymentMethods.PPCP = "<?= $escaper->escapeJs($paymentMethods) ?>";
+    window.bluefinchCheckout.paymentMethods.PPCP = "<?= $escaper->escapeJs($paymentMethods) ?>";
 
     // Vaulted Payment Methods
-    window.geneCheckout.additionalVaultedMethods.vaultedPpcp = "<?= $escaper->escapeJs($vaultedPaymentMethods) ?>";
+    window.bluefinchCheckout.additionalVaultedMethods.vaultedPpcp = "<?= $escaper->escapeJs($vaultedPaymentMethods) ?>";
 </script>
 
 <link rel="stylesheet" href="<?= $escaper->escapeHtmlAttr($styles) ?>" />
